<resources>
    <string name="app_name">指挥终端</string>

    <string name="select">select</string>
    <string name="refresh">refresh</string>
    <string name="camera">camera</string>
    <string name="no_device">no_device</string>

    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="connect">立即连接</string>
    <string name="about_connect">著作关于，北京中科智杰科技</string>

    <string name="HelloTitle">"Hello ZKZJ"</string>
    <string name="endCall1">End call</string>
    <string name="about_us">关于我们</string>
</resources>
